--- a/Ecu911/Pages/AlertasProceso.razor
+++ b/Ecu911/Pages/AlertasProceso.razor
@@ -27,12 +27,16 @@
         </MudSimpleTable>
     </MudGrid>
     </MudItem>
+    <MudItem xs="12" sm="12" md="12" Class="d-flex flex-column justify-center" Style="padding:30px">
+        <MudText Typo="Typo.h3" GutterBottom="true">Ingresar alertas</MudText>
+    </MudItem>
+   
 </MudCardContent>
 
 <EditForm Model="@alerta">
-
+   
     <MudItem xs="12" sm="12" md="12">
-        <MudTextField T="string" @bind-Value="alerta.descripcionAlerta" Label="Descripción de la Contratación" Variant="Variant.Text" Lines="20" />
+        <MudTextField T="string" @bind-Value="alerta.descripcionAlerta" Label="Descripción de Alerta" Variant="Variant.Text" Lines="20" />
     </MudItem>
     <MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
         <MudButton  OnClick="agregarAlerta" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Save" Color="Color.Error" Size="Size.Large">
