--- a/Ecu911/Pages/EtapaPreContractual.razor
+++ b/Ecu911/Pages/EtapaPreContractual.razor
@@ -1,4 +1,5 @@
 ﻿@page "/etapaprecontractual"
+@page "/etapaprecontractual/{id}"
 <PageTitle>Etapa Pre-Contractual</PageTitle>
 <MudText Align="Align.Center" Typo="Typo.h3" >EtapaPreContractual</MudText>
 <EditForm Model="@registro" >
@@ -20,30 +21,18 @@
 </MudGrid>
 </EditForm>
 <MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
-    <MudButton Disabled="@_procesando" OnClick="Subir" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Save" Color="Color.Error" Size="Size.Large">
-        @if (_procesando)
-        {
-            <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
-            <MudText Class="ms-2">Procesando</MudText>
-        }
-        else
-        {
-            <MudText> Guardar</MudText>
-        }
+    <MudButton  OnClick="Subir" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Save" Color="Color.Error" Size="Size.Large">
+            <MudText> Guardar</MudText>      
     </MudButton>
 </MudContainer>
 
 
 @code {
     Precontractual registro = new();
-    private bool _procesando = false;
 
-    private  async Task ProcessSomething()
-    {
-        _procesando = true;
-        await Task.Delay(2000);
-        _procesando = false;
-    }
+    [Parameter]
+    public string id { get; set; }
+
 
 
 
@@ -55,13 +44,7 @@
 
         try
         {
-
-            //ya esta arreglado
-
-            //'Serialization and deserialization of 'System.DateTime?' instances are not supported. Path: $.fechaAdjudicacion.'
-            //NotSupportedException: Serialization and deserialization of 'System.DateTime?' instances are not supported.
-
-
+            registro.IdPreparatoria = id;
             response = await apiService.HttpClient.PostAsJsonAsync("Precontractual", registro);
         }
         catch (HttpRequestException)
@@ -79,14 +62,10 @@
         catch (HttpRequestException)
         {
 
-            //The input does not contain any JSON tokens. Expected the input to start with a valid JSON token, when isFinalBlock is true. Path: $ | LineNumber: 0 | BytePositionInLine: 0.'
-
             var data = await response.Content.ReadFromJsonAsync<ResponseModel>();
             snackBar.Add($"{data.Message}", Severity.Error);
         }
 
-
-        await ProcessSomething();
 
     }
 
