--- a/Ecu911/Pages/EtapaPreparatoria.razor
+++ b/Ecu911/Pages/EtapaPreparatoria.razor
@@ -1,5 +1,5 @@
 ﻿@page "/etapapreparatoria"
-
+@page "/etapapreparatoria/{id}"
 <PageTitle>Etapa Preparatoria</PageTitle>
 <MudText Align="Align.Center" Typo="Typo.h3">Etapa Preparatoria</MudText>
 <EditForm Model="@registro" >
@@ -30,7 +30,7 @@
     </MudItem>
 
     <MudItem xs="6" sm="6" md="6">
-            <MudDatePicker PickerVariant="PickerVariant.Dialog" HelperText="Fecha real de solicitud de inicio de proceso a la subdirección" @bind-Date="registro.fechaSolicitud" DateFormat="yyyy-MM-dd" ></MudDatePicker>
+            <MudDatePicker PickerVariant="PickerVariant.Dialog" HelperText="Fecha real de solicitud de inicio de proceso a la subdirección" @bind-Date="registro.fechaReal" DateFormat="yyyy-MM-dd" ></MudDatePicker>
     </MudItem>
 
       <MudItem xs="6" sm="6" md="6">
@@ -44,47 +44,30 @@
 </MudGrid>
 </EditForm>
 <MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
-    <MudButton Disabled="@_procesando" OnClick="Subir" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Save" Color="Color.Error" Size="Size.Large">
-        @if (_procesando)
-        {
-            <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
-            <MudText Class="ms-2">Procesando</MudText>
-        }
-        else
-        {
-            <MudText> Guardar</MudText>
-        }
+    <MudButton  OnClick="Subir" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Save" Color="Color.Error" Size="Size.Large">
 
+            <MudText> Guardar</MudText>
 
     </MudButton>
 </MudContainer>
 @code {
+
     Preparatoria registro = new();
-
     public double? _valueEn = 0000.00;
-    private string value1 = " ", value2 = "", TextValue = "";
+    Preparatoria procesos = new();
+    HttpResponseMessage? response = new();
+    [Parameter]
+    public string id { get; set; }
 
-    //public string TextValue { get; set; }
-    private bool _procesando = false;
-
-    private async Task ProcessSomething()
-    {
-        _procesando = true;
-        await Task.Delay(2000);
-        _procesando = false;
-    }
 
     protected async void Subir()
     {
-        Preparatoria procesos = new();
 
-        HttpResponseMessage? response = new();
 
         try
         {
 
-        //NotSupportedException: Serialization and deserialization of 'System.DateTime?' instances are not supported.
-
+            registro.IdProcesoCompra = id;
             response = await apiService.HttpClient.PostAsJsonAsync("Preparatoria", registro);
         }
         catch (HttpRequestException)
@@ -105,7 +88,6 @@
             snackBar.Add($"{data.Message}", Severity.Error);
         }
 
-        await ProcessSomething();
 
     }
 
