--- a/Ecu911/_Imports.razor
+++ b/Ecu911/_Imports.razor
@@ -6,6 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 
+@using Blazored.SessionStorage;
+
 @using Microsoft.JSInterop
 @using MudBlazor
 @using Ecu911
